# pazckager

./: .gitignore  Cargo.toml
arch_bindings/: Cargo.toml
local_db/: Cargo.toml
local_db/src/: lib.rs
pacman_bindings/: Cargo.toml
pacman_bindings/src/: lib.rs
pazckager_cli/: Cargo.toml
pazckager_cli/src/: main.rs
pazckager_cli/~/.local/share/: pazckager_store.json
pazckager_core/: Cargo.toml
pazckager_core/src/: err.rs  lib.rs
pazckager_core/src/models/: mod.rs
pazckager_core/src/traits/: mod.rs
pazckager_frontend/: Cargo.toml
pazckager_json_storage/: Cargo.toml
pazckager_json_storage/src/: lib.rs
