[package]
name = "pazckager_cli"
version = "0.1.0"
edition = "2024"
authors = ["Esteban Forero estebanmff@outlook.com"]
description = "cli for the pazckager core crate"
license = "MIT"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
pazckager_core = { path = "../pazckager_core" }
pazckager_json_storage = { path = "../pazckager_json_storage" }
pacman_bindings = { path = "../pacman_bindings" }
