[package]
name = "pazckager_json_storage"
version = "0.1.0"
edition = "2024"
authors = ["Esteban Forero estebanmff@outlook.com"]
description = "Basic json based db for pazckager"
license = "MIT"

[dependencies]
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
pazckager_core = { path = "../pazckager_core" }
shellexpand = "3.1.0"
